# worldmonitor

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CODEX.md  README.md  index.html  live-channels.html  middleware.ts  package-lock.json  package.json  settings.html  vercel.json  vite.config.ts
api/: _cors.js  _cors.test.mjs  chat.js  daily-digest.js  download.js  fwdstart.js  monitor-check.js  og-story.test.mjs  register-interest.js  rss-proxy.js  setup-qstash.js  story.js  telegram-alert.js  telegram-osint.js  telegram-webhook.js  version.js
api/_tools/: alert-dedup.js  alert-enrichment.js  alert-sender.js  conversation-memory.js  cycle-lock.js  developing-tracker.js  digest-cache.js  (+22 more)
e2e/: circuit-breaker-persistence.spec.ts  runtime-fetch.spec.ts
mcp-gateway/: README.md  server.mjs  servers.example.json
scripts/: ais-relay-rss.test.cjs  ais-relay.cjs
server/: cors.ts
src/: App.ts  live-channels-window.ts  main.ts  settings-main.ts  settings-window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: local-api-server.mjs
src-tauri/src/: main.rs
tests/: alert-dedup.test.mjs  alert-enrichment.test.mjs  alert-sender.test.mjs  developing-tracker.test.mjs  event-ledger.test.mjs  evidence-fusion.test.mjs  evidence-gate.test.mjs  fetchers-quality.test.mjs  intel-analysis.test.mjs  intel-noise.test.mjs  mcp-adapter.test.mjs  mcp-gateway.test.mjs  monitor-check-title.test.mjs  monitor-tools-mcp.test.mjs  redis-caching.test.mjs  source-health.test.mjs  telemetry.test.mjs  watchlist-utils.test.mjs
(+177 files in other folders)
